# run-performance

./: .dockerignore  .env  .env.local  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Readme.md  docker-compose.yml  openapi.json  requests.http
.github/: copilot-instructions.md
migrations/: 20250509202133_create_activities_table.down.sql  20250509202133_create_activities_table.up.sql  20250510053747_create_gps_cords_table.down.sql  20250510053747_create_gps_cords_table.up.sql  20250521082644_create_users_table.down.sql  20250521082644_create_users_table.up.sql  20250522000001_fix_trackpoints_column_types.down.sql  20250522000001_fix_trackpoints_column_types.up.sql  20250522000002_add_db_constraints.down.sql  20250522000002_add_db_constraints.up.sql  20250522000003_trackpoints_unique_per_activity.down.sql  20250522000003_trackpoints_unique_per_activity.up.sql  20260503000001_create_challenges_tables.down.sql  20260503000001_create_challenges_tables.up.sql  20260503000002_add_challenge_ends_at.down.sql  20260503000002_add_challenge_ends_at.up.sql  20260503000003_drop_requirement_type_check.down.sql  20260503000003_drop_requirement_type_check.up.sql  20260503000004_add_challenge_status_and_public.down.sql  20260503000004_add_challenge_status_and_public.up.sql  20260503000006_drop_requirement_type_check_fix.down.sql  20260503000006_drop_requirement_type_check_fix.up.sql  20260503000007_seed_public_challenge_sub2_half_marathon.down.sql  20260503000007_seed_public_challenge_sub2_half_marathon.up.sql  20260503000008_seed_public_challenge_speed_weight_loss.down.sql  (+30 more)
(+88 files in other folders)
