[package]
name = "activity_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "activity_api"
path = "src/lib.rs"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "uuid",
    "chrono",
    "runtime-tokio-native-tls",
    "macros",
] }
validator = "0.20.0"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
# For OpenAPI generation
utoipa = { version = "5.3.1", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["actix-web"] }
utoipa-rapidoc = "6.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Rate limiting
actix-governor = "0.8.0"

gpx = { version = "0.10", features = ["serde"] }

futures-util = "0.3"
bytes = "1.5"
